fixed spacing issue on title for mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,7 +83,7 @@ video {
 }
 
 #interiortitletext {
-    padding: 200px;
+    padding-top: 200px;
 }
 
 
